# deep_researcher

./: .env.example  ARCHITECTURE.md  HARDWARE_AGENT_REFACTOR_PLAN.md  OPTIMIZE.md  README.md  pyproject.toml
deep_researcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notes/: 9837dc1f.md  ce93db98.md  f64cd069.md
src/: __init__.py  agent.py  config.py  main.py  models.py  prompts.py  utils.py
src/services/: logging_utils.py  notes.py  planner.py  reporter.py  search.py  summarizer.py  tool_runner.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_config.py  test_hardware_prompts.py  test_notes.py  test_planner.py  test_search.py  test_tool_runner.py  test_utils.py
