[project]
name = "deep-researcher"
version = "0.0.1"
description = "LangGraph-powered deep research assistant."
authors = [
    { name = "Lance Martin" }
]
# readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "tavily-python>=0.5.0",
    "python-dotenv==1.0.1",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "uvicorn[standard]>=0.32.0",
    "ddgs>=9.6.1",
    "loguru>=0.7.3",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1", "pytest>=8.0.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = [
    "tests/",
]

[tool.mypy-overrides]
module = [
    "ddgs.*",
    "duckduckgo_search.*",
    "tavily.*",
    "beautifulsoup4.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"